gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/test18312.d
version https://git-lfs.github.com/spec/v1
oid sha256:293850f71e2c3e31ffa2c301c2b2bf6cebb814e3c033d19a4a6a239b66c2c980
size 317
